--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^20.3.0",
     "@types/react": "^18.2.11",
     "@types/react-dom": "^18.2.4",
+    "@types/redux-logger": "^3.0.9",
     "dotenv": "^16.1.2",
     "firebase": "^9.21.0",
     "react": "^18.2.0",
@@ -28,7 +29,7 @@
     "sass": "^1.62.1",
     "stripe": "^12.7.0",
     "styled-components": "^6.0.0-rc.1",
-    "typescript": "^5.1.3",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
