--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.2.11",
     "@types/react-dom": "^18.2.4",
     "@types/redux-logger": "^3.0.9",
+    "babel-plugin-macros": "^3.1.0",
     "dotenv": "^16.1.2",
     "firebase": "^9.21.0",
     "react": "^18.2.0",
@@ -29,6 +30,7 @@
     "sass": "^1.62.1",
     "stripe": "^12.7.0",
     "styled-components": "^6.0.0-rc.1",
+    "typed-redux-saga": "^1.5.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
