--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "sass": "^1.62.1",
     "stripe": "^12.7.0",
     "styled-components": "^6.0.0-rc.1",
+    "stylis": "^4.3.0",
     "typed-redux-saga": "^1.5.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
